print and correct adaptation on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
     text-decoration: dodgerblue ;
 }
 
-.pokemon-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
+/*.pokemon-container {*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    justify-content: center;*/
+/*}*/
 
 .pokemon-card {
     margin: 10px;
